--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
+    <link rel="stylesheet" href="css/calendar.golden-horizon.css">
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -76,6 +77,7 @@
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="galactic-glow">Galactic Glow</option>
+                <option value="golden-horizon">Golden Horizon</option>
             </select>
         </div>
 
