--- a/index.html
+++ b/index.html
@@ -24,27 +24,39 @@
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
+    <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
+
 
     <style>
         /* Styles for event markers (adjust as needed) */
-        .event-marker-container { /* Added container */
-            position: relative; /* For absolute positioning of markers */
-            display: inline-block;  /* Or block if you want markers on a new line */
-            vertical-align: middle; /* Align with the number */
-            margin-right: 5px; /* Space between marker and number */
+        .event-marker-container {
+            /* Added container */
+            position: relative;
+            /* For absolute positioning of markers */
+            display: inline-block;
+            /* Or block if you want markers on a new line */
+            vertical-align: middle;
+            /* Align with the number */
+            margin-right: 5px;
+            /* Space between marker and number */
         }
 
         .event-marker {
-            position: absolute; /* Position within container */
+            position: absolute;
+            /* Position within container */
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%); /* Center the marker */
-            width: 8px; /* Smaller markers */
+            transform: translate(-50%, -50%);
+            /* Center the marker */
+            width: 8px;
+            /* Smaller markers */
             height: 8px;
             border-radius: 50%;
             /* background-color set by JavaScript */
-            z-index: 10; /* Ensure markers are above the number */
-            pointer-events: none; /* So clicks go through to the cell */
+            z-index: 10;
+            /* Ensure markers are above the number */
+            pointer-events: none;
+            /* So clicks go through to the cell */
         }
     </style>
 </head>
@@ -60,7 +72,8 @@
         </div>
 
         <div class="controls">
-            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All Events</button>
+            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All
+                Events</button>
             <select id="theme-switcher" aria-label="Theme Switcher">
                 <option value="core">Light Mode</option>
                 <option value="dark-mode">Dark Mode</option>
@@ -78,6 +91,7 @@
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="golden-horizon">Golden Horizon</option>
+                <option value="cyber-pulse">Cyber Pulse</option>
             </select>
         </div>
 
@@ -94,7 +108,7 @@
                 </tr>
             </thead>
             <tbody id="calendar-body">
-               
+
             </tbody>
         </table>
 
@@ -112,7 +126,8 @@
             <p>Developed by Sergey Reizman - © 2025</p>
         </footer>
 
-        <a href="https://my-simple-portfolio-sergey.netlify.app/" target="_blank" class="transparent-button">Visit My Portfolio</a>
+        <a href="https://my-simple-portfolio-sergey.netlify.app/" target="_blank" class="transparent-button">
+            Visit My Portfolio</a>
 
         <button class="back-to-top-button" id="backToTopBtn" aria-label="Back to Top">Back to Top</button>
     </div>
