--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
-
+    <link rel="stylesheet" href="css/calendar.northern-nights.css">
+    <link rel="stylesheet" href="css/calendar.arctic-glow.css">
+        
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -92,8 +94,10 @@
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="cyber-pulse">Cyber Pulse</option>
+                <option value="northern-nights">Northern Nights</option>
+                <option value="arctic-glow">Arctic Glow</option>
             </select>
-        </div>
+                </div>
 
         <table>
             <thead>
