--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
+    <link rel="stylesheet" href="css/calendar.new-ai.css">
         
 
     <style>
@@ -96,6 +97,7 @@
                 <option value="cyber-pulse">Cyber Pulse</option>
                 <option value="northern-nights">Northern Nights</option>
                 <option value="arctic-glow">Arctic Glow</option>
+                <option value="new-ai">New AI</option>
             </select>
                 </div>
 
