--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.new-ai.css">
+    <link rel="stylesheet" href="css/calendar.steel-shadows.css">
         
 
     <style>
@@ -98,6 +99,7 @@
                 <option value="northern-nights">Northern Nights</option>
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="new-ai">New AI</option>
+                <option value="steel-shadows">Steel Shadows</option>
             </select>
                 </div>
 
