tropical sunset theme

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
+    <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
         
 
     <style>
@@ -100,6 +101,7 @@
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="new-ai">New AI</option>
                 <option value="steel-shadows">Steel Shadows</option>
+                <option value="tropical-sunset">Tropical Sunset</option>
             </select>
                 </div>
 
