exotic island theme

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
-        
+    <link rel="stylesheet" href="css/calendar.exotic-island.css">
+
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -102,8 +103,10 @@
                 <option value="new-ai">New AI</option>
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
+                <option value="exotic-island">Exotic Island</option>
+
             </select>
-                </div>
+        </div>
 
         <table>
             <thead>
