--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
+    <link rel="stylesheet" href="css/calendar.pink-lake.css">
 
 
     <style>
@@ -104,6 +105,7 @@
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="exotic-island">Exotic Island</option>
+                <option value="pink-lake">Pink Lake</option>
 
             </select>
         </div>
