--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
+    <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
 
 
     <style>
@@ -106,6 +107,7 @@
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="exotic-island">Exotic Island</option>
                 <option value="pink-lake">Pink Lake</option>
+                <option value="crystal-snowfall">Crystal Snowfall</option>
 
             </select>
         </div>
