--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
+    <link rel="stylesheet" href="css/calendar.sky-eagle.css">
 
 
     <style>
@@ -108,6 +109,7 @@
                 <option value="exotic-island">Exotic Island</option>
                 <option value="pink-lake">Pink Lake</option>
                 <option value="crystal-snowfall">Crystal Snowfall</option>
+                <option value="sky-eagle">Sky Eagle</option>
 
             </select>
         </div>
