--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
     <link rel="stylesheet" href="css/calendar.sky-eagle.css">
+    <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
 
 
     <style>
@@ -87,7 +88,7 @@
                 <option value="core">Light Mode</option>
                 <option value="dark-mode">Dark Mode</option>
                 <option value="ocean-view">Ocean View</option>
-                <option value="greyscale">Grayscale</option>
+                <option value="greyscale">Greyscale</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="serene-shores">Serene Shores</option>
                 <option value="blue-ice">Blue Ice</option>
@@ -110,6 +111,7 @@
                 <option value="pink-lake">Pink Lake</option>
                 <option value="crystal-snowfall">Crystal Snowfall</option>
                 <option value="sky-eagle">Sky Eagle</option>
+                <option value="monochrome-ink">Monochrome Ink</option>
 
             </select>
         </div>
