--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
     <link rel="stylesheet" href="css/calendar.sky-eagle.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
+    <link rel="stylesheet" href="css/calendar.purple-fog.css">
 
 
     <style>
@@ -112,6 +113,7 @@
                 <option value="crystal-snowfall">Crystal Snowfall</option>
                 <option value="sky-eagle">Sky Eagle</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
+                <option value="purple-fog">Purple Fog</option>
 
             </select>
         </div>
