--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <link rel="stylesheet" href="css/calendar.sky-eagle.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
     <link rel="stylesheet" href="css/calendar.purple-fog.css">
+    <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
+    <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
 
 
     <style>
@@ -114,6 +116,9 @@
                 <option value="sky-eagle">Sky Eagle</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
                 <option value="purple-fog">Purple Fog</option>
+                <option value="amazon-dolphin">Amazon Dolphin</option>
+                <option value="stockholm-roofs">Stockholm-Roofs</option>
+
 
             </select>
         </div>
