--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <link rel="stylesheet" href="css/calendar.purple-fog.css">
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
+    <link rel="stylesheet" href="css/calendar.mountain-peak.css">
+
 
 
     <style>
@@ -118,6 +120,7 @@
                 <option value="purple-fog">Purple Fog</option>
                 <option value="amazon-dolphin">Amazon Dolphin</option>
                 <option value="stockholm-roofs">Stockholm-Roofs</option>
+                <option value="mountain-peak">Mountain Peak</option>
 
 
             </select>
