Black Hacker Theme

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
+    <link rel="stylesheet" href="css/calendar.black-hacker">
 
 
 
@@ -121,6 +122,7 @@
                 <option value="amazon-dolphin">Amazon Dolphin</option>
                 <option value="stockholm-roofs">Stockholm-Roofs</option>
                 <option value="mountain-peak">Mountain Peak</option>
+                <option value="black-hacker">Black Hacker</option>
 
 
             </select>
