--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
-    <link rel="stylesheet" href="css/calendar.black-hacker">
+    <link rel="stylesheet" href="css/calendar.black-hacker.css">
 
 
 
