--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
+    <link rel="stylesheet" href="css/calendar.secretive-ninja.css">
     
 
     <style>
@@ -118,6 +119,7 @@
                 <option value="amazon-dolphin">Amazon Dolphin</option>
                 <option value="stockholm-roofs">Stockholm-Roofs</option>
                 <option value="mountain-peak">Mountain Peak</option>
+                <option value="secretive-ninja">Secretive Ninja</option>
                 
 
             </select>
