--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
     <link rel="stylesheet" href="css/calendar.secretive-ninja.css">
+    <link rel="stylesheet" href="css/calendar.black-hacker.css">
     
 
     <style>
@@ -120,6 +121,7 @@
                 <option value="stockholm-roofs">Stockholm-Roofs</option>
                 <option value="mountain-peak">Mountain Peak</option>
                 <option value="secretive-ninja">Secretive Ninja</option>
+                <option value="black-hacker">Black Hacker</option>
                 
 
             </select>
