--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
     <link rel="stylesheet" href="css/calendar.secretive-ninja.css">
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
+    <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
     
 
     <style>
@@ -122,6 +123,7 @@
                 <option value="mountain-peak">Mountain Peak</option>
                 <option value="secretive-ninja">Secretive Ninja</option>
                 <option value="black-hacker">Black Hacker</option>
+                <option value="cyber-pulse">Cyber Pulse</option>
                 
 
             </select>
