--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Calendar</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" 
+    rel="stylesheet">  <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.responsive.css">
@@ -41,7 +43,9 @@
     <link rel="stylesheet" href="css/calendar.secretive-ninja.css">
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
-    
+    <link rel="stylesheet" href="css/calendar.dragon-flame.css">
+
+
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -124,7 +128,8 @@
                 <option value="secretive-ninja">Secretive Ninja</option>
                 <option value="black-hacker">Black Hacker</option>
                 <option value="cyber-pulse">Cyber Pulse</option>
-                
+                <option value="dragon-flame">Dragon Flame</option>
+
 
             </select>
         </div>
