solar flare theme

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
+    <link rel="stylesheet" href="css/calendar.solar-flare.css">
 
 
 
@@ -129,6 +130,7 @@
                 <option value="black-hacker">Black Hacker</option>
                 <option value="cyber-pulse">Cyber Pulse</option>
                 <option value="dragon-flame">Dragon Flame</option>
+                <option value="solar-flare">Solar Flare</option>
 
 
             </select>
