pure light theme

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
+    <link rel="stylesheet" href="css/calendar.pure-light.css">
 
 
 
@@ -131,6 +132,7 @@
                 <option value="cyber-pulse">Cyber Pulse</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="solar-flare">Solar Flare</option>
+                <option value="pure-light">Pure Light</option>
 
 
             </select>
