--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
+    <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
+
 
 
 
@@ -133,6 +135,7 @@
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="pure-light">Pure Light</option>
+                <option value="shaolin-monastery">Shaolin Monastery</option>
 
 
             </select>
