--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
     <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
+    <link rel="stylesheet" href="css/calendar.black-coffee.css">
 
 
 
@@ -136,6 +137,7 @@
                 <option value="solar-flare">Solar Flare</option>
                 <option value="pure-light">Pure Light</option>
                 <option value="shaolin-monastery">Shaolin Monastery</option>
+                <option value="black-coffee">Black Coffee</option>
 
 
             </select>
