--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Calendar</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" 
-    rel="stylesheet">  <link rel="stylesheet" href="css/calendar.variables.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.responsive.css">
@@ -48,6 +48,8 @@
     <link rel="stylesheet" href="css/calendar.pure-light.css">
     <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
+    <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
+
 
 
 
@@ -138,6 +140,8 @@
                 <option value="pure-light">Pure Light</option>
                 <option value="shaolin-monastery">Shaolin Monastery</option>
                 <option value="black-coffee">Black Coffee</option>
+                <option value="forgotten-dreams">Forgotten Dreams</option>
+
 
 
             </select>
