--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
+    <link rel="stylesheet" href="css/calendar.wild-wonders.css">
 
 
 
@@ -141,6 +142,7 @@
                 <option value="shaolin-monastery">Shaolin Monastery</option>
                 <option value="black-coffee">Black Coffee</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
+                <option value="wild-wonders">Wild Wonders</option>
 
 
 
