secret night theme

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
+    <link rel="stylesheet" href="css/calendar.secret-night.css">
 
 
 
@@ -143,6 +144,7 @@
                 <option value="black-coffee">Black Coffee</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
                 <option value="wild-wonders">Wild Wonders</option>
+                <option value="secret-night">Secret Night</option>
 
 
 
