candy world theme

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
     <link rel="stylesheet" href="css/calendar.secret-night.css">
+    <link rel="stylesheet" href="css/calendar.candy-world.css">
 
 
 
@@ -145,6 +146,7 @@
                 <option value="forgotten-dreams">Forgotten Dreams</option>
                 <option value="wild-wonders">Wild Wonders</option>
                 <option value="secret-night">Secret Night</option>
+                <option value="candy-world">Candy World</option>
 
 
 
