cracked ice theme

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
     <link rel="stylesheet" href="css/calendar.secret-night.css">
     <link rel="stylesheet" href="css/calendar.candy-world.css">
+    <link rel="stylesheet" href="css/calendar.cracked-ice.css">
 
 
 
@@ -147,6 +148,7 @@
                 <option value="wild-wonders">Wild Wonders</option>
                 <option value="secret-night">Secret Night</option>
                 <option value="candy-world">Candy World</option>
+                <option value="cracked-ice">Cracked Ice</option>
 
 
 
