--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="css/calendar.secret-night.css">
     <link rel="stylesheet" href="css/calendar.candy-world.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
+    <link rel="stylesheet" href="css/calendar.fir-balsam.css">
 
 
 
@@ -149,6 +150,7 @@
                 <option value="secret-night">Secret Night</option>
                 <option value="candy-world">Candy World</option>
                 <option value="cracked-ice">Cracked Ice</option>
+                <option value="fir-balsam">Fir Balsam</option>
 
 
 
