--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="css/calendar.candy-world.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
+    <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
 
 
 
@@ -151,6 +152,7 @@
                 <option value="candy-world">Candy World</option>
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="fir-balsam">Fir Balsam</option>
+                <option value="sea-diamonds">Sea Diamonds</option>
 
 
 
