antarctic snowdrifts theme

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
     <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
-
-
+    <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
 
 
 
@@ -153,6 +152,7 @@
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="fir-balsam">Fir Balsam</option>
                 <option value="sea-diamonds">Sea Diamonds</option>
+                <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
 
 
 
