silicon valley theme

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
     <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
+    <link rel="stylesheet" href="css/calendar.silicon-valley.css">
 
 
 
@@ -153,6 +154,8 @@
                 <option value="fir-balsam">Fir Balsam</option>
                 <option value="sea-diamonds">Sea Diamonds</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
+                <option value="silicon-valley">Silicon Valley</option>
+
 
 
 
