--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
+    <link rel="stylesheet" href="css/calendar.time-machine.css">
+
 
 
 
@@ -154,6 +156,8 @@
                 <option value="sea-diamonds">Sea Diamonds</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="silicon-valley">Silicon Valley</option>
+                <option value="time-machine">Time Machine</option>
+
 
 
 
