--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
+    <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
 
 
 
@@ -157,6 +158,7 @@
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="silicon-valley">Silicon Valley</option>
                 <option value="time-machine">Time Machine</option>
+                <option value="magellanic-penguin">Magellanic Penguin</option>
 
 
 
