--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
+    <link rel="stylesheet" href="css/calendar.white-shark.css">
 
 
 
@@ -159,8 +160,7 @@
                 <option value="silicon-valley">Silicon Valley</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
-
-
+                <option value="white-shark">White Shark</option>
 
 
 
