--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
-
+    <link rel="stylesheet" href="css/calendar.blue-whale.css">
 
 
 
@@ -161,6 +161,7 @@
                 <option value="time-machine">Time Machine</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
                 <option value="white-shark">White Shark</option>
+                <option value="blue-whale">Blue Whale</option>
 
 
 
