--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
+    <link rel="stylesheet" href="css/calendar.polar-bear.css">
 
 
 
@@ -162,7 +163,7 @@
                 <option value="magellanic-penguin">Magellanic Penguin</option>
                 <option value="white-shark">White Shark</option>
                 <option value="blue-whale">Blue Whale</option>
-
+                <option value="polar-bear">Polar Bear</option>
 
 
             </select>
