--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <link rel="stylesheet" href="css/calendar.white-shark.css">
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
+    <link rel="stylesheet" href="css/calendar.mountain-lake.css">
 
 
 
@@ -164,6 +165,7 @@
                 <option value="white-shark">White Shark</option>
                 <option value="blue-whale">Blue Whale</option>
                 <option value="polar-bear">Polar Bear</option>
+                <option value="mountain-lake">Mountain Lake</option>
 
 
             </select>
