--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
     <link rel="stylesheet" href="css/calendar.mountain-lake.css">
+    <link rel="stylesheet" href="css/calendar.pirate-ship.css">
 
 
 
@@ -166,6 +167,7 @@
                 <option value="blue-whale">Blue Whale</option>
                 <option value="polar-bear">Polar Bear</option>
                 <option value="mountain-lake">Mountain Lake</option>
+                <option value="pirate-ship">Pirate Ship</option>
 
 
             </select>
