--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
     <link rel="stylesheet" href="css/calendar.mountain-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
+    <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
 
 
 
@@ -168,6 +169,7 @@
                 <option value="polar-bear">Polar Bear</option>
                 <option value="mountain-lake">Mountain Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
+                <option value="flamingo-sky">Flamingo Sky</option>
 
 
             </select>
