--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <link rel="stylesheet" href="css/calendar.mountain-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
+    <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
 
 
 
@@ -170,6 +171,7 @@
                 <option value="mountain-lake">Mountain Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
                 <option value="flamingo-sky">Flamingo Sky</option>
+                <option value="cacao-plantation">Cacao Plantation</option>
 
 
             </select>
