--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
+    <link rel="stylesheet" href="css/calendar.green-coffee.css">
 
 
 
@@ -172,6 +173,7 @@
                 <option value="pirate-ship">Pirate Ship</option>
                 <option value="flamingo-sky">Flamingo Sky</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
+                <option value="green-coffee">Green Coffee</option>
 
 
             </select>
