--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
+    <link rel="stylesheet" href="css/calendar.sea-lions.css">
 
 
 
@@ -174,6 +175,7 @@
                 <option value="flamingo-sky">Flamingo Sky</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="green-coffee">Green Coffee</option>
+                <option value="sea-lions">Sea Lions</option>
 
 
             </select>
