--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
     <link rel="stylesheet" href="css/calendar.sea-lions.css">
+    <link rel="stylesheet" href="css/calendar.midnight-train.css">
 
 
 
@@ -176,6 +177,7 @@
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="green-coffee">Green Coffee</option>
                 <option value="sea-lions">Sea Lions</option>
+                <option value="midnight-train">Midnight Train</option>
 
 
             </select>
