--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
     <link rel="stylesheet" href="css/calendar.sea-lions.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
+    <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
 
-
+    
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -178,6 +179,7 @@
                 <option value="green-coffee">Green Coffee</option>
                 <option value="sea-lions">Sea Lions</option>
                 <option value="midnight-train">Midnight Train</option>
+                <option value="hurricane-clouds">Hurricane Clouds</option>
 
 
             </select>
