--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <link rel="stylesheet" href="css/calendar.sea-lions.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
+    <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
 
     
 
@@ -180,6 +181,8 @@
                 <option value="sea-lions">Sea Lions</option>
                 <option value="midnight-train">Midnight Train</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
+                <option value="rainforest-jungle">Rainforest Jungle</option>
+                
 
 
             </select>
