--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
+    <link rel="stylesheet" href="css/calendar.great-wall.css">
 
     
 
@@ -182,6 +183,7 @@
                 <option value="midnight-train">Midnight Train</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
                 <option value="rainforest-jungle">Rainforest Jungle</option>
+                <option value="great-wall">Great Wall</option>
                 
 
 
