--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
     <link rel="stylesheet" href="css/calendar.great-wall.css">
+    <link rel="stylesheet" href="css/calendar.viking-helmet.css">
 
     
 
@@ -184,6 +185,7 @@
                 <option value="hurricane-clouds">Hurricane Clouds</option>
                 <option value="rainforest-jungle">Rainforest Jungle</option>
                 <option value="great-wall">Great Wall</option>
+                <option value="viking-helmet">Viking Helmet</option>
                 
 
 
