--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
     <link rel="stylesheet" href="css/calendar.great-wall.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
+    <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
 
     
 
@@ -186,6 +187,7 @@
                 <option value="rainforest-jungle">Rainforest Jungle</option>
                 <option value="great-wall">Great Wall</option>
                 <option value="viking-helmet">Viking Helmet</option>
+                <option value="bamboo-flute">Bamboo Flute</option>
                 
 
 
