--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <link rel="stylesheet" href="css/calendar.great-wall.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
+    <link rel="stylesheet" href="css/calendar.golden-gate.css">
 
     
 
@@ -188,6 +189,7 @@
                 <option value="great-wall">Great Wall</option>
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="bamboo-flute">Bamboo Flute</option>
+                <option value="golden-gate">Golden Gate</option>
                 
 
 
