--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
+    <link rel="stylesheet" href="css/calendar.red-lake.css">
 
     
 
@@ -190,6 +191,7 @@
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="bamboo-flute">Bamboo Flute</option>
                 <option value="golden-gate">Golden Gate</option>
+                <option value="red-lake">Red Lake</option>
                 
 
 
