--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
     <link rel="stylesheet" href="css/calendar.best-practice.css">
+    <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
 
 
-    
+
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -204,8 +205,8 @@
                 <option value="blue-planet">Blue Planet</option>
                 <option value="rising-sun">Rising Sun</option>
                 <option value="best-practice">Best Practice</option>
+                <option value="bronze-horseman">Bronze Horseman</option>
 
-           
 
 
             </select>
