--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
     <link rel="stylesheet" href="css/calendar.best-practice.css">
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
+    <link rel="stylesheet" href="css/calendar.black-hole.css">
+    <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
+
 
 
 
@@ -206,6 +209,8 @@
                 <option value="rising-sun">Rising Sun</option>
                 <option value="best-practice">Best Practice</option>
                 <option value="bronze-horseman">Bronze Horseman</option>
+                <option value="black-hole">Black Hole</option>
+                <option value="bermuda-triangle">Bermuda Triangle</option>
 
 
 
