--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
     <link rel="stylesheet" href="css/calendar.best-practice.css">
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
+    <link rel="stylesheet" href="css/calendar.black-hole.css">
+
     
 
 
@@ -207,6 +209,8 @@
                 <option value="best-practice">Best Practice</option>
                 <option value="bronze-horseman">Bronze Horseman</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
+                <option value="black-hole">Black Hole</option>
+
                 
 
 
