--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
     <link rel="stylesheet" href="css/calendar.black-hole.css">
+    <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
+
 
     
 
@@ -210,6 +212,7 @@
                 <option value="bronze-horseman">Bronze Horseman</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
                 <option value="black-hole">Black Hole</option>
+                <option value="melting-glaciers">Melting Glaciers</option>
 
                 
 
